<resources>
    <string name="app_name">Stockko</string>
    <string name="tab_text_1">Cute</string>
    <string name="tab_text_2">Ayşegül</string>
    <string name="tab_text_3">Reis</string>
    <string name="tab_text_4">Enis</string>
    <string name="search">Search</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="kayıtgidis">Hesabın yok mu? Kaydol</string>
    <string name="k_adi">Kullanıcı Adı</string>
    <string name="mail">Mail</string>
    <string name="kayitSifre">Şifre</string>
    <string name="kayitsifretekrar">Şİfre Tekrar</string>
    <string name="magazaAdresi">Mağaza Adersi</string>
    <string name="magazaAdi">Mağaza Adı</string>
    <string name="kaydol">Kaydol</string>
    <string name="urun_id">Ürün ID:</string>
    <string name="urun_ad">Ürün Adı:</string>
    <string name="urun_adeti">Ürün Adeti:</string>
    <string name="urun_detay">Ürün Detay:</string>
    <string name="saveProduct">Kaydet</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
