<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/k_adi"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/kayitSifre"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etMail"
        app:layout_constraintTop_toBottomOf="@+id/etMail" />

    <EditText
        android:id="@+id/etSifreTekrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/kayitsifretekrar"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/etSifre"
        app:layout_constraintTop_toBottomOf="@+id/etSifre" />

    <EditText
        android:id="@+id/etMagazaAdres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/magazaAdresi"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="@+id/etMagazaAdi"
        app:layout_constraintTop_toBottomOf="@+id/etMagazaAdi" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/etAd"
        app:layout_constraintTop_toBottomOf="@+id/etAd" />

    <EditText
        android:id="@+id/etMagazaAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/magazaAdi"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etSifreTekrar"
        app:layout_constraintTop_toBottomOf="@+id/etSifreTekrar" />

    <Button
        android:id="@+id/btnKaydol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:background="#F44336"
        android:text="@string/kaydol"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/etMagazaAdres"
        app:layout_constraintTop_toBottomOf="@+id/etMagazaAdres" />

</androidx.constraintlayout.widget.ConstraintLayout>