<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="47dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manzara8" />

    <TextView
        android:id="@+id/tvProductId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/urun_id"
        android:textColor="#692B16"
        app:layout_constraintStart_toStartOf="@+id/ivProductImage"
        app:layout_constraintTop_toBottomOf="@+id/ivProductImage" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/urun_ad"
        android:textColor="#692B16"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tvProductId"
        app:layout_constraintTop_toBottomOf="@+id/tvProductId" />

    <TextView
        android:id="@+id/tvProductPiece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/urun_adeti"
        android:textColor="#692B16"
        app:layout_constraintEnd_toEndOf="@+id/tvProductId"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <TextView
        android:id="@+id/productContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/urun_detay"
        android:textColor="#692B16"
        app:layout_constraintEnd_toEndOf="@+id/tvProductPiece"
        app:layout_constraintTop_toBottomOf="@+id/tvProductPiece" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductId"
        app:layout_constraintEnd_toEndOf="@+id/ivProductImage"
        app:layout_constraintStart_toEndOf="@+id/tvProductId"
        app:layout_constraintTop_toTopOf="@+id/tvProductId" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductName"
        app:layout_constraintEnd_toEndOf="@+id/etId"
        app:layout_constraintStart_toEndOf="@+id/tvProductName"
        app:layout_constraintTop_toTopOf="@+id/tvProductName" />

    <EditText
        android:id="@+id/etPiece"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvProductPiece"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toEndOf="@+id/tvProductPiece"
        app:layout_constraintTop_toTopOf="@+id/tvProductPiece" />

    <EditText
        android:id="@+id/etDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/etPiece"
        app:layout_constraintStart_toEndOf="@+id/productContent"
        app:layout_constraintTop_toBottomOf="@+id/etPiece" />

    <Button
        android:id="@+id/btnProductSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#692B16"
        android:text="@string/saveProduct"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/etDetail"
        app:layout_constraintStart_toStartOf="@+id/etDetail"
        app:layout_constraintTop_toBottomOf="@+id/etDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>